--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </style>
 </head>
 <body>
-    <img id="background" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='600'%3E%3Crect fill='%23333' width='400' height='600'/%3E%3Ctext x='200' y='300' font-size='20' fill='white' text-anchor='middle'%3E이미지를 여기에 넣으세요%3C/text%3E%3C/svg%3E" alt="배경">
+    <img id="background" src="gkwlgns.jpg" alt="배경">
     
     <div id="speechBubble" class="speech-bubble"></div>
 
@@ -157,3 +157,4 @@
     </script>
 </body>
 </html>
+
